Update project files and add new resources for Decoupled Bottleneck Attention
- Enhanced `.gitignore` to exclude additional LaTeX-related files.
- Added new PDF document for Decoupled Bottleneck Attention.
- Updated `paper.tex` to improve figure references.
- Expanded `README.md` with instructions for training a ~1B model on a single GPU.
- Introduced `requirements_runtime.txt` for runtime dependencies.
- Added new scripts and notebooks for model training and analysis.
- Included multiple visual assets and summaries for comparative evaluation of model performance.

--- a/paper.tex
+++ b/paper.tex
@@ -488,7 +488,7 @@ We compute singular value spectra and entropy-based effective rank for the $W_Q$
 \IfFileExists{assets/m4max_rank_evidence.png}{
   \includegraphics[width=0.95\textwidth]{\detokenize{assets/m4max_rank_evidence.png}}
 }{
-  \fbox{\parbox{0.92\textwidth}{\textbf{Missing figure:} \texttt{assets/m4max_rank_evidence.png}.\\
+  \fbox{\parbox{0.92\textwidth}{\textbf{Missing figure:} \path{assets/m4max_rank_evidence.png}.\\
   Run the rank analysis script to generate this figure.}}
 }
 \caption{Singular value spectra and entropy-based effective rank for $W_Q$ and $W_K$ across layers (example: v29 checkpoints).}
@@ -507,7 +507,7 @@ To complement the theoretical KV-cache scaling analysis, we include two lightwei
 \IfFileExists{assets/m4max_baseline_rope_extrapolation.png}{
   \includegraphics[width=\textwidth]{\detokenize{assets/m4max_baseline_rope_extrapolation.png}}
 }{
-  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \texttt{assets/m4max\_baseline\_rope\_extrapolation.png}}}
+  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \path{assets/m4max_baseline_rope_extrapolation.png}}}
 }
 \caption{Baseline}
 \end{subfigure}
@@ -517,7 +517,7 @@ To complement the theoretical KV-cache scaling analysis, we include two lightwei
 \IfFileExists{assets/m4max_decoupled_rope_extrapolation.png}{
   \includegraphics[width=\textwidth]{\detokenize{assets/m4max_decoupled_rope_extrapolation.png}}
 }{
-  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \texttt{assets/m4max\_decoupled\_rope\_extrapolation.png}}}
+  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \path{assets/m4max_decoupled_rope_extrapolation.png}}}
 }
 \caption{Decoupled}
 \end{subfigure}
@@ -532,7 +532,7 @@ To complement the theoretical KV-cache scaling analysis, we include two lightwei
 \IfFileExists{assets/m4max_baseline_needle_haystack.png}{
   \includegraphics[width=\textwidth]{\detokenize{assets/m4max_baseline_needle_haystack.png}}
 }{
-  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \texttt{assets/m4max\_baseline\_needle\_haystack.png}}}
+  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \path{assets/m4max_baseline_needle_haystack.png}}}
 }
 \caption{Baseline}
 \end{subfigure}
@@ -542,7 +542,7 @@ To complement the theoretical KV-cache scaling analysis, we include two lightwei
 \IfFileExists{assets/m4max_decoupled_needle_haystack.png}{
   \includegraphics[width=\textwidth]{\detokenize{assets/m4max_decoupled_needle_haystack.png}}
 }{
-  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \texttt{assets/m4max\_decoupled\_needle\_haystack.png}}}
+  \fbox{\parbox{0.95\textwidth}{\textbf{Missing:} \path{assets/m4max_decoupled_needle_haystack.png}}}
 }
 \caption{Decoupled}
 \end{subfigure}
